--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "activationCommands": {
     "atom-workspace": "language-meta:toggle"
   },
-  "repository": "https://github.com/atom/language-meta",
+  "repository": "https://github.com/SingularityAzure/language-meta",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
